https://www.elastic.co/guide/en/apm/agent/go/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[unreleased]]
=== Unreleased

https://github.com/elastic/apm-agent-go/compare/v1.9.0...master[View commits]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.9.0]]
==== 1.9.0 - 2020/11/02

- module/apmgoredisv8: introduce new package to support go-redis v8 {pull}780[#(780)]
- module/apmhttp: introduce httptrace client option {pull}788[#(788)]
- module/apmsql: add support for database/sql/driver.Validator {pull}791[#(791)]
- Record sample rate on transactions and spans, propagate through `tracestate` {pull}804[#(804)]
- module/apmredigo: change redigo dependency to v1.8.2 {pull}807[#(807)]
- Deprecate IGNORE_URLS, replace with TRANSACTION_IGNORE_URLS {pull}811[(#811)]
- Tracer.Close now waits for the transport goroutine to end before returning {pull}816[#(816)]
- Relax Kubernetes pod UID discovery rules {pull}819[#(819)]
- Add transaction and span outcome {pull}820[#(820)]
- Add cloud metadata, configurable with ELASTIC_APM_CLOUD_PROVIDER {pull}823[#(823)]
- Round ELASTIC_APM_SAMPLING_RATE with 4 digits precision {pull}828[#(828)]
- module/apmhttp: implement io.ReaderFrom in wrapped http.ResponseWriter {pull}830[#(830)]
- Fixed Transaction.Discard so that it sets TransactionData to nil {pull}836[#(836)]
- module/apmsql/pgxv4: add support for pgx driver {pull}831[#(831)]
- module/apmgormv2: add support for gorm.io (GORM v2) {pull}825[#(825)]

[[release-notes-1.8.0]]
==== 1.8.0 - 2020/05/06

- Add "recording" config option, to dynamically disable event recording {pull}737[(#737)]
- Enable central configuration of "stack_frames_min_duration" and "stack_trace_limit" {pull}742[(#742)]
- Implement "CloseIdleConnections" on the Elasticsearch RoundTripper {pull}750[(#750)]