@@ -23,6 +23,8 @@ endif::[]
 
 https://github.com/elastic/apm-agent-go/compare/v1.9.0...master[View commits]
 
+- module/apmsql: add tracingDriver.Unwrap method to get underlying driver {pull}#849[#(849)]
+
 [[release-notes-1.x]]
 === Go Agent version 1.x
 
